--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Radio Player with Equalizer VU</title>
+  <title>Music-FM</title>
   <style>
     body {
       background: #1a1a1a;
@@ -30,10 +30,10 @@
 </head>
 <body>
 
-  <h3>🎙️ NPO Radio 1</h3>
+  <h3>🎙️ Music-FM</h3>
 
   <audio id="audio" controls crossorigin="anonymous">
-    <source src="https://icecast.omroep.nl/radio1-bb-mp3" type="audio/mpeg">
+    <source src="http://85.147.37.244:8000/listen.mp3" type="audio/mpeg">
     Your browser does not support the audio tag.
   </audio>
 
@@ -94,3 +94,4 @@
 
 </body>
 </html>
+
