--- a/index.html
+++ b/index.html
@@ -9,35 +9,7 @@
       background-color: #1e1e1e;
       color: #ffffff;
       text-align: center;
-      padding: 50px;
-    }
-
-    .player-container {
-      background: #333;
-      border-radius: 10px;
-      padding: 20px;
-      display: inline-block;
-    }
-
-    audio {
-      width: 100%;
-      margin-top: 10px;
-    }
-
-    h1 {
-      margin-bottom: 20px;
-    }
-  </style>
-</head>
-<body>
-
-  <div class="player-container">
-    <h1>🎧 MUSIC-FM</h1>
-    <audio controls autoplay>
-      <source src="https://uk16freenew.listen2myradio.com/live.mp3?typeportmount=s1_11309_stream_497418145" type="audio/mpeg">
-      Je browser ondersteunt geen audio-element.
-    </audio>
-  </div>
-
+<div data-type="newStreamPlayer" data-publicToken="d62b80d0-d1f5-4329-a00e-0c2af01ad5a5" data-theme="dark" data-color="351EE8" data-channelId="9f988666-df3d-4934-a354-53eabbcbbfd1" data-rendered="false" class="cstrEmbed"><a href="https://www.caster.fm">Shoutcast Hosting</a> <a href="https://www.caster.fm">Stream Hosting</a> <a href="https://www.caster.fm">Radio Server Hosting</a></div><script src="//cdn.cloud.caster.fm//widgets/embed.js"></script>
 </body>
 </html>
+
