--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="nl">
-<head>
-  <meta charset="UTF-8">
-  <title>Music-FM</title>
-<div data-type="newStreamPlayer" data-publicToken="d62b80d0-d1f5-4329-a00e-0c2af01ad5a5" data-theme="dark" data-color="351EE8" data-channelId="9f988666-df3d-4934-a354-53eabbcbbfd1" data-rendered="false" class="cstrEmbed"><a href="https://www.caster.fm">Shoutcast Hosting</a> <a href="https://www.caster.fm">Stream Hosting</a> <a href="https://www.caster.fm">Radio Server Hosting</a></div><script src="//cdn.cloud.caster.fm//widgets/embed.js"></script>
-</body>
-</html>
-
-
+<div class="cstrEmbed" data-type="newStreamPlayer" data-publicToken="d62b80d0-d1f5-4329-a00e-0c2af01ad5a5" data-theme="dark" data-color="6C2BDD" data-channelId="" data-rendered="false">
+<a href="https://www.caster.fm">Shoutcast Hosting</a> <a href="https://www.caster.fm">Stream Hosting</a> <a href="https://www.caster.fm">Radio Server Hosting</a></div>
+<script src="//cdn.cloud.caster.fm//widgets/embed.js"></script>
