Change audio source and maintain HTML structure
Updated audio source URL and ensured HTML structure is intact.

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
   <div class="player-container">
     <h1>🎧 MUSIC-FM</h1>
     <audio controls autoplay>
-      <source src="http://sapircast.caster.fm:13294/MFr94">
+      <source src="http://uk23freenew.listen2myradio.com:20425">
       Je browser ondersteunt geen audio-element.
     </audio>
   </div>
 
 </body>
 </html>
+
