--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <title>Live Radio</title>
+  <title>Music-FM</title>
   <style>
     body {
-      background: #1a1a1a;
-      color: #fff;
-      font-family: sans-serif;
+      font-family: Arial, sans-serif;
+      background-color: #1e1e1e;
+      color: #ffffff;
       text-align: center;
+      padding: 50px;
+    }
+
+    .player-container {
+      background: #333;
+      border-radius: 10px;
       padding: 20px;
+      display: inline-block;
     }
 
     audio {
@@ -17,82 +24,20 @@
       margin-top: 10px;
     }
 
-    canvas {
-      display: block;
-      margin: 20px auto 0;
-      background: #000;
-      width: 100%;
-      max-width: 600px;
-      height: 100px;
-      border: 1px solid #444;
+    h1 {
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
 
-  <h3>🎙️ NPO Radio 1</h3>
-
-  <audio id="audio" controls crossorigin="anonymous">
-    <source src="https://icecast.omroep.nl/radio1-bb-mp3" type="audio/mpeg">
-    Your browser does not support the audio tag.
-  </audio>
-
-  <canvas id="vuMeter" width="600" height="100"></canvas>
-
-  <script>
-    const audio = document.getElementById('audio');
-    const canvas = document.getElementById('vuMeter');
-    const ctx = canvas.getContext('2d');
-
-    let audioCtx;
-    let analyser;
-    let source;
-    let dataArray;
-
-    audio.addEventListener('play', () => {
-      if (!audioCtx) {
-        audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-        analyser = audioCtx.createAnalyser();
-        analyser.fftSize = 64; // Lower = fewer bars (32 bands)
-        source = audioCtx.createMediaElementSource(audio);
-        source.connect(analyser);
-        analyser.connect(audioCtx.destination);
-
-        dataArray = new Uint8Array(analyser.frequencyBinCount);
-
-        draw();
-      } else if (audioCtx.state === 'suspended') {
-        audioCtx.resume();
-      }
-    });
-
-    function draw() {
-      requestAnimationFrame(draw);
-
-      analyser.getByteFrequencyData(dataArray);
-
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      const barWidth = (canvas.width / dataArray.length) - 2;
-      const barHeightScale = canvas.height / 255;
-
-      for (let i = 0; i < dataArray.length; i++) {
-        const barHeight = dataArray[i] * barHeightScale;
-        const x = i * (barWidth + 2);
-        const y = canvas.height - barHeight;
-
-        const gradient = ctx.createLinearGradient(x, y, x, canvas.height);
-        gradient.addColorStop(0, "#0f0");
-        gradient.addColorStop(0.5, "#ff0");
-        gradient.addColorStop(1, "#f00");
-
-        ctx.fillStyle = gradient;
-        ctx.fillRect(x, y, barWidth, barHeight);
-      }
-    }
-  </script>
+  <div class="player-container">
+    <h1>🎧 MUSIC-FM</h1>
+    <audio controls autoplay>
+      <source src="http://uk23freenew.listen2myradio.com:35879/stream" type="audio/mpeg">
+      Je browser ondersteunt geen audio-element.
+    </audio>
+  </div>
 
 </body>
 </html>
-
-
