--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
   <div class="player-container">
     <h1>🎧 MUSIC-FM</h1>
     <audio controls autoplay>
-      <source src="http://uk23freenew.listen2myradio.com:35879/stream.mp3" type="audio/mpeg">
+      <source src="http://" type="audio/mpeg">
       Je browser ondersteunt geen audio-element.
     </audio>
   </div>
 
 </body>
 </html>
+
 
